Forces alignment with overly specific element targeting, seems to solve the issue bit terribly inflexible.

--- a/defaults/widgets/navigation.less
+++ b/defaults/widgets/navigation.less
@@ -128,8 +128,8 @@
 }
 
 // Navigation Alignment
-.widget .extendednavigation,
-.widget.extendednavigation {
+div.widget .extendednavigation,
+div.widget.extendednavigation {
 	 ul li {
 		 float: none;
 		 display: inline-block;
